Update server functional for get Event. Update quotation modal.

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -45,7 +45,7 @@
                         <!--<span class="see-more">(<a href="#">See more</a>)</span>-->
                     </p>
 
-                    <p class="act-request-quotation-label" styles="display: none;">
+                    <p class="act-request-quotation-label" style="display: none;">
                         Quote sent
                     </p>
 
@@ -64,7 +64,7 @@
 
                     <div class="controls">
                         <div class="button-gradient filled">
-                            <button type="button" class="btn register quotationSendbtn">Send Quotation</button>
+                            <button type="button" class="btn register quotationSendbtn" event-id="{{ chat.event.id }}">Send Quotation</button>
                         </div>
 
 
