Added Quotation confirmation api, select performance api, select service api, select option api, select package api.

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
@@ -190,7 +190,7 @@
 }
 
 .free-quote-modal .profile-categories li{
-    float: left;
+/*    float: left;*/
     min-width: 137px;
     text-align: left;
 }
