--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -22,6 +22,7 @@
     width: 548px;
     height: 502px;
     float: left;
+    overflow: overlay;
 }
 .quotation-modal .payment-info {
     padding: 20px;
