Update quotation modal functional. Added package add. 12/11/2016 5:26 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -73,6 +73,7 @@
     padding: 12px 20px 12px 12px;
     font-family: LatoBold;
     font-size: 18px;
+    height: 40px;
     color: #FFF;
     background: rgba(255,171,106,1);
     background: -moz-linear-gradient(left, rgba(255,171,106,1) 0%, rgba(255,119,60,1) 100%);
@@ -105,6 +106,12 @@
     font-size: 15px;
     color: #3d4248;
     margin-bottom: 9px;
+    display: inline;
+}
+
+.quotation-modal a {
+    color: #ff7a3e;
+    text-decoration: underline;
 }
 
 
