Update select box styles for quotation modal. 12/11/2016 7:00 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -138,6 +138,15 @@
     clear: both;
 }
 
+.quotation-modal .quantity-select {
+    width: 42px;
+}
+
+.quotation-modal .duration-select,
+.quotation-modal .price-select {
+    width: 70px;
+}
+
 @media screen and (max-width: 960px) {
     .quotation-modal .act-info,
     .quotation-modal .place-info {
